test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_multiplicity/src/fallback_attr.sw
library;

#[fallback]
pub fn ok() { } // Actually semantically also not ok, but the compilation will not reach that phase.

#[fallback]
#[fallback]
#[fallback]
pub fn not_ok() { }